--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -32,6 +32,7 @@
 foreground: true|false <run cloudfuse in foreground or background>
 
 # Common configurations
+read-only: true|false <mount in read only mode - used for Streaming and FUSE>
 allow-other: true|false <allow other users to access the mounted directory - used for FUSE and File Cache>
 nonempty: true|false <allow mounting on non-empty directory>
 restricted-characters-windows: true|false <allows filenames with restricted characters to appear on Windows - used for AzStorage and S3Storage>
@@ -151,10 +152,20 @@ azstorage:
   max-concurrency: <number of parallel upload/download threads. Default - 32>
   tier: hot|cool|cold|premium|archive|none <blob-tier to be set while uploading a blob. Default - none>
   block-list-on-mount-sec: <time list api to be blocked after mount (in sec). Default - 0 sec>
+  max-retries: <number of retries to attempt for any operation failure. Default - 5>
+  max-retry-timeout-sec: <maximum timeout allowed for a given retry (in sec). Default - 900 sec>
+  retry-backoff-sec: <retry backoff between two tries (in sec). Default - 4 sec>
+  max-retry-delay-sec: <maximum delay between two tries (in sec). Default - 60 sec>
+  http-proxy: ip-address:port <http proxy to be used for connection>
+  https-proxy: ip-address:port <https proxy to be used for connection>
+  fail-unsupported-op: true|false <for block blob account return failure for unsupported operations like chmod and chown>
   auth-resource: <resource string to be used during OAuth token retrieval>
   update-md5: true|false <set md5 sum on upload. Impacts performance. works only when file-cache component is part of the pipeline>
   validate-md5: true|false <validate md5 on download. Impacts performance. works only when file-cache component is part of the pipeline>
+  virtual-directory: true|false <support virtual directories without existence of a special marker blob. Default - true>
   disable-compression: true|false <disable transport layer content encoding like gzip, set this flag to true if blobs have content-encoding set in container>
+  max-results-for-list: <maximum number of results returned in a single list API call while getting file attributes. Default - 2>
+  telemetry : <additional information that customer want to push in user-agent>
   honour-acl: true|false <honour ACLs on files and directories when mounted using MSI Auth and object-ID is provided in config>
   cpk-enabled: true|false <enable client provided key encryption>
   cpk-encryption-key: <customer provided base64-encoded AES-256 encryption key value>
