--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,16 @@
             "console": "integratedTerminal",
             "args": ["mount", "~/mycontainer", "--config-file=config.yaml", "--foreground=true"],
             "postDebugTask": "Unmount"
+        },
+        {
+            "name": "E2E Cloudfuse",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/main.go",
+            "console": "integratedTerminal",
+            "args": ["mount", "~/e2e-test", "--config-file=config.yaml", "--foreground=true"],
+            "postDebugTask": "Unmount"
         }
     ]
 }
