--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -150,10 +150,24 @@ jobs:
             '/n $qSEAGATE TECHNOLOGY LLC$q /t http://timestamp.digicert.com $p"' \
             "windows_installer_build.iss"
       -
+        name: Prep Inno Setup Script for No Gui
+        working-directory: ./build
+        shell: bash
+        # Inno Setup is pre-installed on GitHub's windows-latest image
+        # see documentation: https://github.com/actions/runner-images/blob/main/images/windows/Windows2022-Readme.md
+        run: |
+          printf '%s ' >run-iscc_no_gui.bat \
+            '"C:/Program Files (x86)/Inno Setup 6/iscc.exe"' \
+            '"/Ssigntool=$qC:\Program Files (x86)\Windows Kits\10\App Certification Kit\signtool.exe$q' \
+            'sign /fd SHA256 /a /f $q${{ github.workspace }}\build\signingKey.pfx$q' \
+            '/n $qSEAGATE TECHNOLOGY LLC$q /t http://timestamp.digicert.com $p"' \
+            "windows_installer_build_no_gui.iss"
+      -
         name: Run Inno Setup
         working-directory: ./build
         run: |
           .\run-iscc.bat
+          .\run-iscc_no_gui.bat
       -
         name: Set Version
         id: get_version
@@ -162,6 +176,14 @@ jobs:
         name: Rename installer
         run: |
           mv build/Output/cloudfuse.exe build/Output/cloudfuse_${{ steps.get_version.outputs.VERSION }}_windows_amd64.exe
+          mv build/Output/cloudfuse_no_gui.exe build/Output/cloudfuse_no_gui_${{ steps.get_version.outputs.VERSION }}_windows_amd64.exe
+      -
+        name: Cache windows installer
+        uses: actions/cache/save@v4
+        with:
+          enableCrossOsArchive: true
+          path: build/Output/cloudfuse_${{ steps.get_version.outputs.VERSION }}_windows_amd64.exe
+          key: windows-cloudfuse-installer-${{ github.sha }}
       -
         name: Cache windows installer
         uses: actions/cache/save@v4
