--- a/setup/baseConfig.yaml
+++ b/setup/baseConfig.yaml
@@ -70,6 +70,7 @@ libfuse:
   max-fuse-threads: <number of threads allowed at libfuse layer for highly parallel operations, Default is 128>
   direct-io: true|false <enable to bypass the kernel cache>
   network-share: true|false <runs as a network share. may improve performance when latency to cloud is high. only supported on Windows. Known issue - only one Cloudfuse network share can be mounted at a time>
+  display-capacity-mb: <number of MB to display as the mounted storage capacity. Default - 1TB (1048576 MB)>
 
   # Streaming configuration
 stream:
