--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -57,7 +57,24 @@ builds:
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
 
-  - id: linux-amd64
+  - id: linux-amd64-fuse2
+    goos:
+      - linux
+    goarch:
+      - amd64
+    tags:
+      - fuse2
+    env:
+      - CGO_ENABLED=1
+      - CC=zig cc -target x86_64-linux-gnu
+      - CXX=zig c++ -target x86_64-linux-gnu
+    flags:
+      - -trimpath
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    ldflags:
+      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
+
+  - id: linux-amd64-fuse3
     goos:
       - linux
     goarch:
@@ -87,7 +104,24 @@ builds:
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
   
-  - id: linux-arm64
+  - id: linux-arm64-fuse2
+    goos:
+      - linux
+    goarch:
+      - arm64
+    tags:
+      - fuse2
+    env:
+      - CGO_ENABLED=1
+      - CC=zig cc -target aarch64-linux-gnu
+      - CXX=zig c++ -target aarch64-linux-gnu
+    flags:
+      - -trimpath
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    ldflags:
+      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
+
+  - id: linux-arm64-fuse3
     goos:
       - linux
     goarch:
@@ -122,9 +156,9 @@ checksum:
   algorithm: sha256
 
 archives:
-  - id: linux-amd64
+  - id: linux-amd64-fuse2
     builds:
-      - linux-amd64
+      - linux-amd64-fuse2
       - linux-amd64-health-monitor
     format: tar.gz
     files:
@@ -146,9 +180,33 @@ archives:
       - src: "sampleStreamingConfigAzure.yaml"
         dst: "./samples/sampleStreamingConfigAzure.yaml"
 
-  - id: linux-amd64_no_gui
+  - id: linux-amd64-fuse3
     builds:
-      - linux-amd64
+      - linux-amd64-fuse3
+      - linux-amd64-health-monitor
+    format: tar.gz
+    files:
+      - LICENSE
+      - README.md
+      - NOTICE
+      - src: "./gui/dist/cloudfuseGUI_Linux/*"
+        dst: "./"
+      - src: "setup/baseConfig.yaml"
+        dst: "./samples/baseConfig.yaml"
+      - src: "sampleFileCacheConfigAzure.yaml"
+        dst: "./samples/sampleFileCacheConfigAzure.yaml"
+      - src: "sampleFileCacheWithSASConfigAzure.yaml"
+        dst: "./samples/sampleFileCacheWithSASConfigAzure.yaml"
+      - src: "sampleFileCacheConfigS3.yaml"
+        dst: "./samples/sampleFileCacheConfigS3.yaml"
+      - src: "sampleStreamingConfigS3.yaml"
+        dst: "./samples/sampleStreamingConfigS3.yaml"
+      - src: "sampleStreamingConfigAzure.yaml"
+        dst: "./samples/sampleStreamingConfigAzure.yaml"
+
+  - id: linux-amd64_no_gui-fuse2
+    builds:
+      - linux-amd64-fuse2
       - linux-amd64-health-monitor
     format: tar.gz
     name_template: "{{ .ProjectName }}_no_gui_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
@@ -169,9 +227,55 @@ archives:
       - src: "sampleStreamingConfigAzure.yaml"
         dst: "./samples/sampleStreamingConfigAzure.yaml"
 
-  - id: linux-arm64_no_gui
+  - id: linux-amd64_no_gui-fuse3
     builds:
-      - linux-arm64
+      - linux-amd64-fuse3
+      - linux-amd64-health-monitor
+    format: tar.gz
+    name_template: "{{ .ProjectName }}_no_gui_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    files:
+      - LICENSE
+      - README.md
+      - NOTICE
+      - src: "setup/baseConfig.yaml"
+        dst: "./samples/baseConfig.yaml"
+      - src: "sampleFileCacheConfigAzure.yaml"
+        dst: "./samples/sampleFileCacheConfigAzure.yaml"
+      - src: "sampleFileCacheWithSASConfigAzure.yaml"
+        dst: "./samples/sampleFileCacheWithSASConfigAzure.yaml"
+      - src: "sampleFileCacheConfigS3.yaml"
+        dst: "./samples/sampleFileCacheConfigS3.yaml"
+      - src: "sampleStreamingConfigS3.yaml"
+        dst: "./samples/sampleStreamingConfigS3.yaml"
+      - src: "sampleStreamingConfigAzure.yaml"
+        dst: "./samples/sampleStreamingConfigAzure.yaml"
+
+  - id: linux-arm64_no_gui-fuse2
+    builds:
+      - linux-arm64-fuse2
+      - linux-arm64-health-monitor
+    format: tar.gz
+    name_template: "{{ .ProjectName }}_no_gui_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    files:
+      - LICENSE
+      - README.md
+      - NOTICE
+      - src: "setup/baseConfig.yaml"
+        dst: "./samples/baseConfig.yaml"
+      - src: "sampleFileCacheConfigAzure.yaml"
+        dst: "./samples/sampleFileCacheConfigAzure.yaml"
+      - src: "sampleFileCacheWithSASConfigAzure.yaml"
+        dst: "./samples/sampleFileCacheWithSASConfigAzure.yaml"
+      - src: "sampleFileCacheConfigS3.yaml"
+        dst: "./samples/sampleFileCacheConfigS3.yaml"
+      - src: "sampleStreamingConfigS3.yaml"
+        dst: "./samples/sampleStreamingConfigS3.yaml"
+      - src: "sampleStreamingConfigAzure.yaml"
+        dst: "./samples/sampleStreamingConfigAzure.yaml"
+
+  - id: linux-arm64_no_gui-fuse3
+    builds:
+      - linux-arm64-fuse3
       - linux-arm64-health-monitor
     format: tar.gz
     name_template: "{{ .ProjectName }}_no_gui_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
@@ -246,7 +350,7 @@ release:
     - glob: ./build/Output/cloudfuse_no_gui_{{.Version}}_windows_amd64.exe
 
 nfpms:
-  - id: linux
+  - id: linux-fuse2
 
     # Name of the package.
     package_name: cloudfuse
@@ -254,7 +358,7 @@ nfpms:
     # Build IDs for the builds you want to create NFPM packages for.
     # Defaults empty, which means no filtering.
     builds:
-      - linux-amd64
+      - linux-amd64-fuse2
 
     vendor: Seagate Technology
     homepage: https://github.com/Seagate/cloudfuse
@@ -311,7 +415,7 @@ nfpms:
         dependencies:
           - fuse-devel
 
-  - id: linux_no_gui
+  - id: linux-fuse3
 
     # Name of the package.
     package_name: cloudfuse
@@ -319,8 +423,74 @@ nfpms:
     # Build IDs for the builds you want to create NFPM packages for.
     # Defaults empty, which means no filtering.
     builds:
-      - linux-amd64
-      - linux-arm64
+      - linux-amd64-fuse3
+
+    vendor: Seagate Technology
+    homepage: https://github.com/Seagate/cloudfuse
+    maintainer: https://github.com/Seagate/cloudfuse
+    description: |-
+      A FUSE filesystem for interacting with S3 and Azure storage.
+    license: MIT
+
+    # Formats to be generated.
+    formats:
+      - deb
+      - rpm
+
+    section: default
+
+    provides:
+      - cloudfuse
+      - cfusemon
+
+    # Contents to add to the package.
+    # GoReleaser will automatically add the binaries.
+    contents:
+      # Basic file that applies to all packagers
+      - src: './dist/linux-{{ .Arch }}-health-monitor_linux_{{ .Arch }}{{- if eq .Arch "amd64" }}_{{ .Amd64 }}{{- else }}{{ end }}/cfusemon'
+        dst: /usr/bin/cfusemon
+      - src: NOTICE
+        dst: /usr/share/doc/cloudfuse/NOTICE
+      - src: LICENSE
+        dst: /usr/share/doc/cloudfuse/LICENSE
+      - src: setup/baseConfig.yaml
+        dst: /usr/share/doc/cloudfuse/examples/baseConfig.yaml
+      - src: sampleFileCacheConfigAzure.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleFileCacheConfigAzure.yaml
+      - src: sampleFileCacheConfigS3.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleFileCacheConfigS3.yaml
+      - src: sampleFileCacheWithSASConfigAzure.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleFileCacheWithSASConfigAzure.yaml
+      - src: sampleStreamingConfigS3.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleStreamingConfigS3.yaml
+      - src: sampleStreamingConfigAzure.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleStreamingConfigAzure.yaml
+
+      - src: ./gui/cloudfuse.desktop
+        dst: /usr/share/applications/cloudfuse.desktop
+      - src: "./gui/dist/cloudfuseGUI_Linux/*"
+        dst: "/opt/cloudfuse"
+  
+    overrides:
+      deb:
+        dependencies:
+          - libfuse3-dev
+
+      rpm:
+        dependencies:
+          - fuse3-devel
+
+
+  - id: linux_no_gui-fuse2
+
+    # Name of the package.
+    package_name: cloudfuse
+
+    # Build IDs for the builds you want to create NFPM packages for.
+    # Defaults empty, which means no filtering.
+    builds:
+      - linux-amd64-fuse2
+      - linux-arm64-fuse2
     file_name_template: "{{ .ProjectName }}_no_gui_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 
     vendor: Seagate Technology
@@ -372,6 +542,68 @@ nfpms:
       rpm:
         dependencies:
           - fuse-devel
+
+  - id: linux_no_gui-fuse3
+
+    # Name of the package.
+    package_name: cloudfuse
+
+    # Build IDs for the builds you want to create NFPM packages for.
+    # Defaults empty, which means no filtering.
+    builds:
+      - linux-amd64-fuse3
+      - linux-arm64-fuse3
+    file_name_template: "{{ .ProjectName }}_no_gui_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+
+    vendor: Seagate Technology
+    homepage: https://github.com/Seagate/cloudfuse
+    maintainer: https://github.com/Seagate/cloudfuse
+    description: |-
+      A FUSE filesystem for interacting with S3 and Azure storage.
+    license: MIT
+
+    # Formats to be generated.
+    formats:
+      - deb
+      - rpm
+
+    section: default
+
+    provides:
+      - cloudfuse
+      - cfusemon
+
+    # Contents to add to the package.
+    # GoReleaser will automatically add the binaries.
+    contents:
+      # Basic file that applies to all packagers
+      - src: './dist/linux-{{ .Arch }}-health-monitor_linux_{{ .Arch }}{{- if eq .Arch "amd64" }}_{{ .Amd64 }}{{- else }}{{ end }}/cfusemon'
+        dst: /usr/bin/cfusemon
+      - src: NOTICE
+        dst: /usr/share/doc/cloudfuse/NOTICE
+      - src: LICENSE
+        dst: /usr/share/doc/cloudfuse/LICENSE
+      - src: setup/baseConfig.yaml
+        dst: /usr/share/doc/cloudfuse/examples/baseConfig.yaml
+      - src: sampleFileCacheConfigAzure.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleFileCacheConfigAzure.yaml
+      - src: sampleFileCacheConfigS3.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleFileCacheConfigS3.yaml
+      - src: sampleFileCacheWithSASConfigAzure.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleFileCacheWithSASConfigAzure.yaml
+      - src: sampleStreamingConfigS3.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleStreamingConfigS3.yaml
+      - src: sampleStreamingConfigAzure.yaml
+        dst: /usr/share/doc/cloudfuse/examples/sampleStreamingConfigAzure.yaml
+  
+    overrides:
+      deb:
+        dependencies:
+          - libfuse3-dev
+
+      rpm:
+        dependencies:
+          - fuse3-devel
 
 metadata:
   mod_timestamp: "{{ .CommitTimestamp }}"
