--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -81,8 +81,9 @@ builds:
       - amd64
     env:
       - CGO_ENABLED=1
-      - CC=zig cc -target x86_64-linux-gnu
-      - CXX=zig c++ -target x86_64-linux-gnu
+      - CC=zig cc -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include
+      - CXX=zig c++ -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/x86_64-linux-gnu/
+      - CGO_LDFLAGS=-L/usr/lib/x86_64-linux-gnu/
     flags:
       - -trimpath
     mod_timestamp: '{{ .CommitTimestamp }}'
@@ -128,8 +129,9 @@ builds:
       - arm64
     env:
       - CGO_ENABLED=1
-      - CC=zig cc -target aarch64-linux-gnu
-      - CXX=zig c++ -target aarch64-linux-gnu
+      - CC=zig cc -target aarch64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include
+      - CXX=zig c++ -target aarch64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/x86_64-linux-gnu/
+      - CGO_LDFLAGS="-L/usr/lib/x86_64-linux-gnu/"
     flags:
       - -trimpath
     mod_timestamp: '{{ .CommitTimestamp }}'
