--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -62,14 +62,13 @@ builds:
       - linux
     goarch:
       - amd64
-    tags:
-      - fuse2
     env:
       - CGO_ENABLED=1
       - CC=zig cc -target x86_64-linux-gnu
       - CXX=zig c++ -target x86_64-linux-gnu
     flags:
       - -trimpath
+      - -tags=fuse2
     mod_timestamp: '{{ .CommitTimestamp }}'
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
@@ -81,14 +80,14 @@ builds:
       - amd64
     env:
       - CGO_ENABLED=1
-      - CC=zig cc -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include
-      - CXX=zig c++ -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/x86_64-linux-gnu/
       - CGO_LDFLAGS=-L/usr/lib/x86_64-linux-gnu/
+      - CC=zig cc -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/
+      - CXX=zig c++ -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/
     flags:
       - -trimpath
     mod_timestamp: '{{ .CommitTimestamp }}'
     ldflags:
-      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
+      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }} -L /usr/lib/x86_64-linux-gnu/
 
   - id: linux-amd64-health-monitor
     main: ./tools/health-monitor/main.go
@@ -110,14 +109,13 @@ builds:
       - linux
     goarch:
       - arm64
-    tags:
-      - fuse2
     env:
       - CGO_ENABLED=1
       - CC=zig cc -target aarch64-linux-gnu
       - CXX=zig c++ -target aarch64-linux-gnu
     flags:
       - -trimpath
+      - -tags=fuse2
     mod_timestamp: '{{ .CommitTimestamp }}'
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
@@ -129,11 +127,11 @@ builds:
       - arm64
     env:
       - CGO_ENABLED=1
-      - CC=zig cc -target aarch64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include
-      - CXX=zig c++ -target aarch64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/x86_64-linux-gnu/
-      - CGO_LDFLAGS="-L/usr/lib/x86_64-linux-gnu/"
+      - CC=zig cc -target aarch64-linux-gnu
+      - CXX=zig c++ -target aarch64-linux-gnu
     flags:
       - -trimpath
+      - -tags=fuse2
     mod_timestamp: '{{ .CommitTimestamp }}'
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
