Add cross compilation for arm64 with fuse3

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -80,14 +80,14 @@ builds:
       - amd64
     env:
       - CGO_ENABLED=1
-      - CGO_LDFLAGS=-L/usr/lib/x86_64-linux-gnu/
-      - CC=zig cc -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/
-      - CXX=zig c++ -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu/ -iwithsysroot /usr/include/
+      - CGO_LDFLAGS=-L/usr/lib/x86_64-linux-gnu
+      - CC=zig cc -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu -iwithsysroot /usr/include
+      - CXX=zig c++ -target x86_64-linux-gnu -isystem /usr/lib/x86_64-linux-gnu -iwithsysroot /usr/include
     flags:
       - -trimpath
     mod_timestamp: '{{ .CommitTimestamp }}'
     ldflags:
-      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }} -L /usr/lib/x86_64-linux-gnu/
+      - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }} -L /usr/lib/x86_64-linux-gnu
 
   - id: linux-amd64-health-monitor
     main: ./tools/health-monitor/main.go
@@ -127,11 +127,11 @@ builds:
       - arm64
     env:
       - CGO_ENABLED=1
-      - CC=zig cc -target aarch64-linux-gnu
-      - CXX=zig c++ -target aarch64-linux-gnu
+      - CGO_LDFLAGS=-L/usr/lib/aarch64-linux-gnu
+      - CC=zig cc -target aarch64-linux-gnu -isystem /usr/lib/aarch64-linux-gnu -iwithsysroot /usr/include
+      - CXX=zig c++ -target aarch64-linux-gnu  -isystem /usr/lib/aarch64-linux-gnu -iwithsysroot /usr/include
     flags:
       - -trimpath
-      - -tags=fuse2
     mod_timestamp: '{{ .CommitTimestamp }}'
     ldflags:
       - -s -w -X github.com/Seagate/cloudfuse/common.GitCommit={{.Commit}} -X github.com/Seagate/cloudfuse/common.CommitDate={{ .CommitDate }}
